--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -11,62 +11,32 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[color]
-; First pair is alpha
-
-bg = #DD151415
-invis = #00000000
-fg = #eeeeee
-grey = #55ffffff
-
-red = #fb4934
-green = #1DB954
-yellow = #fabd2f
-blue = #83a598
-purple = #d3869b
-pink = #d3869b
-aqua = #8ec07c
-cyan = #4ec9b0
-orange = #fe8019
-
-white = #dddddd
-blueA = #83afe1
-grey1 = #5bb1c9
-grey2 = #5bf1c9
-
-;==========================================================
 
 [global/wm]
 margin-bottom = 5px
 margin-top = 0
+
+include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/modules.ini
 
 [bar/base]
 monitor-strict = false
 monitor-exact = true
 override-redirect = true
 tray-position = none
-
-width = 99.5%
-height = 40
-offset-x = 0.25%
-offset-y = 5px
+enable-ipc = true
 
 cursor-click = pointer
 
 background = ${color.bg}
 foreground = ${color.fg}
 
-radius = 5
+radius = 15
 fixed-center = true
-
 line-size = 3
-line-color = #f00
-
 padding = 5
 module-margin-left = 2
 module-margin-right = 2
-
-enable-ipc = true
 
 ; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = BreezeSans:pixelsize=12:style=Medium Condensed;4
@@ -80,257 +50,57 @@ font-6 = Material Design Icons Desktop:pixelsize=18;6
 ; wifi icon
 font-7 = Material Design Icons Desktop:pixelsize=18;4
 
-
-[bar/coeus]
+[bar/top]
 inherit = bar/base
-monitor = DP-4
-monitor-fallback = HDMI-0
-bottom = false
-modules-left = search workspaces
-modules-center = now-playing prev-song play-pause next-song
-modules-right = cpu memory volume ethernet date-time powermenu
-
-[bar/prometheus]
-inherit = bar/base
-monitor = DP3
-monitor-fallback = eDP1
-bottom = false
+width = 99.5%
+height = 40
+offset-x = 0.25%
+offset-y = 5px
 modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
-modules-right = cpu memory volume backlight battery wifi  date-time powermenu
+modules-right = cpu memory volume backlight battery wifi date-time powermenu
+
+[bar/workspaces]
+inherit = bar/base
+width = 270px
+height = 40
+offset-x = 5px
+offset-y = 5px
+modules-center = workspaces
+
+[bar/music]
+inherit = bar/base
+width = 30%
+height = 40
+offset-x = 35%
+offset-y = 5px
+modules-center = now-playing
+modules-right = prev-song play-pause next-song
+
+[bar/sys]
+inherit = bar/base
+width = 270
+height = 40
+; -(width+0.25)%
+offset-x = 100%:-390
+offset-y = 5px
+modules-center = volume backlight battery wifi
+
+[bar/datetime]
+inherit = bar/base
+width = 110px
+height = 40
+; -(width+0.25)%
+offset-x = 100%:-115
+offset-y = 5px
+modules-center = date-time
 
 [bar/tickerbar]
 inherit = bar/base
+width = 99.5%
+height = 40
+offset-x = 0.25%
+offset-y = 5px
 bottom = true
 modules-center = ticker
 
-[module/ticker]
-type = custom/script
-exec = ~/.config/polybar/scripts/ticker-scroll
-tail = true
-; label-foreground = ${color.green}
-format = <label>
-; click-left = focus-spotify
-; interval = 2
-
-[module/search]
-type = custom/text
-content = "  "
-content-foreground = ${color.fg}
-click-left = ~/.config/polybar/scripts/search &
-
-[module/xmonad-log]
-type = custom/script
-exec = xmonad-log
-tail = true
-
-[module/window]
-type = internal/xwindow
-label = %title:0:30:...%
-
-[module/workspaces]
-type = internal/xworkspaces
-enable-scroll = false
-
-format = <label-state>
-format-font = 6
-format-background = ${color.bg}
-format-padding = 0
-
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-5 = 6;
-icon-6 = 7;
-icon-7 = NSP;
-icon-default = 
-
-label-active = %icon%
-label-occupied = %icon%
-label-urgent = %icon%
-label-empty = %icon%
-label-empty-padding = 1
-label-active-padding = 1
-label-urgent-padding = 1
-label-occupied-padding = 1
-label-empty-foreground = ${color.grey}
-label-active-foreground = ${color.cyan}
-label-urgent-foreground = ${color.orange}
-label-occupied-foreground = ${color.fg}
-
-[module/now-playing]
-type = custom/script
-tail = true
-format = <label>
-; label-font = 2
-exec = get-song
-click-left = focus-spotify
-interval = 2
-
-[module/prev-song]
-type = custom/text
-content = 玲
-content-font = 5
-content-foreground = ${color.fg}
-click-left = playerctl -p spotify previous
-
-[module/play-pause]
-type = custom/ipc
-hook-0 = echo ""
-hook-1 = echo "契"
-format-font = 5
-initial = 2
-click-left = ~/.config/polybar/scripts/play-pause
-
-[module/next-song]
-type = custom/text
-content = 怜
-content-font = 5
-content-foreground = ${color.fg}
-click-left = playerctl -p spotify next
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format = <ramp-load>
-format-foreground = ${color.pink}
-ramp-load-8 = █
-ramp-load-7 = ▇
-ramp-load-6 = ▆
-ramp-load-5 = ▅
-ramp-load-4 = ▄
-ramp-load-3 = ▃
-ramp-load-2 = ▂
-ramp-load-1 = ▁
-ramp-load-0 =
-; format-prefix = "%{T2}󰧑%{T-} "
-format-prefix-foreground = ${color.fg}
-format-underline = ${color.pink}
-label = %percentage%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-; format-prefix = "%{T2}%{T-} "
-format = <ramp-used>
-format-foreground = ${color.cyan}
-ramp-used-8 = █
-ramp-used-7 = ▇
-ramp-used-6 = ▆
-ramp-used-5 = ▅
-ramp-used-4 = ▄
-ramp-used-3 = ▃
-ramp-used-2 = ▂
-ramp-used-1 = ▁
-ramp-used-0 =
-label = %percentage_used%%
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ADP1
-ramp-capacity-font = 5
-animation-charging-font = 4
-format-charging = "<animation-charging>  <label-charging> "
-format-discharging = "<ramp-capacity>  <label-discharging> "
-format-full-prefix-font = 5
-format-full-prefix = " "
-format-full-prefix-foreground = ${color.green}
-format-full = "<label-full> "
-ramp-capacity-0=""
-ramp-capacity-1=""
-ramp-capacity-2=""
-ramp-capacity-3=""
-ramp-capacity-4=""
-ramp-capacity-5=""
-ramp-capacity-6=""
-ramp-capacity-7=""
-ramp-capacity-8=""
-ramp-capacity-9=""
-ramp-capacity-10=""
-ramp-capacity-0-foreground = ${color.red}
-ramp-capacity-1-foreground = ${color.red}
-ramp-capacity-2-foreground = ${color.orange}
-ramp-capacity-3-foreground = ${color.yellow}
-ramp-capacity-foreground = ${color.fg}
-animation-charging-0=""
-animation-charging-1=""
-animation-charging-2=""
-animation-charging-3=""
-animation-charging-4=""
-animation-charging-5=""
-animation-charging-foreground = ${color.fg}
-animation-charging-framerate = 750
-
-[module/volume]
-type = internal/pulseaudio
-use-ui-max = false
-format-volume = "<ramp-volume> <label-volume>  "
-ramp-volume-0 = 󰕿
-ramp-volume-1 = 󰖀
-ramp-volume-2 = 󰕾
-ramp-volume-3 = "   "
-label-volume-foreground = ${color.fg}
-label-muted = "󰸈 "
-format-muted-foreground = ${color.fg}
-click-right = pavucontrol &
-
-[module/backlight]
-type = internal/xbacklight
-card = intel_backlight
-enable-scroll = true
-format = "<ramp>   <label>  "
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-
-[module/wifi]
-type = internal/network
-interface = wlp59s0
-interval = 3.0
-format-connected = "<ramp-signal>"
-label-connected = %essid%
-label-disconnected = 󰤭
-label-disconnected-foreground = ${color.red}
-ramp-signal-0 = 󰤫
-ramp-signal-1 = 󰤟
-ramp-signal-2 = 󰤢
-ramp-signal-3 = 󰤥
-ramp-signal-4 = 󰤨
-ramp-signal-0-foreground = ${color.red}
-ramp-signal-1-foreground = ${color.yellow}
-ramp-signal-foreground = ${color.fg}
-ramp-signal-font = 8
-
-[module/ethernet]
-type = internal/network
-interface = enp3s0
-interval = 1.0
-ping-interval = 5
-label-connected-font = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-format-packetloss = <label-packetloss>
-label-connected = 
-label-disconnected = 
-label-disconnected-foreground = #6c809e
-label-packetloss = 
-format-packetloss-foreground = #ffa64c
-
-[module/date-time]
-type = internal/date
-interval = 5
-date = %a %b %e
-time = %I:%M %p
-label = %date%   %time%
-
-[module/powermenu]
-type = custom/text
-content = 󰐥
-content-foreground = ${color.red}
-click-left = ~/.config/polybar/scripts/powermenu
