Cleanup polybar config

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -1,6 +1,6 @@
 [module/search]
 type = custom/text
-content = "  "
+content = "  "
 content-foreground = ${color.fg}
 click-left = ~/.config/polybar/scripts/search &
 
@@ -49,10 +49,9 @@ label-occupied-foreground = ${color.fg}
 type = custom/script
 tail = true
 format = <label>
-; label-font = 2
 exec = get-song
 click-left = focus-spotify
-; interval = 2
+interval = 5
 
 [module/prev-song]
 type = custom/text
@@ -90,7 +89,6 @@ ramp-load-3 = ▃
 ramp-load-2 = ▂
 ramp-load-1 = ▁
 ramp-load-0 =
-; format-prefix = "%{T2}󰧑%{T-} "
 format-prefix-foreground = ${color.fg}
 format-underline = ${color.pink}
 label = %percentage%%
@@ -98,7 +96,6 @@ label = %percentage%%
 [module/memory]
 type = internal/memory
 interval = 2
-; format-prefix = "%{T2}%{T-} "
 format = <ramp-used>
 format-foreground = ${color.cyan}
 ramp-used-8 = █
@@ -210,10 +207,9 @@ format-packetloss-foreground = #ffa64c
 [module/date-time]
 type = internal/date
 interval = 5
-; date = %a %b %e
-time = %I:%M %p
-; label =    %date%       %time%
-label =     %time%
+time =    %I:%M %p
+time-alt =    %a %b %e
+label = %time%
 
 [module/powermenu]
 type = custom/text
@@ -225,8 +221,5 @@ click-left = ~/.config/polybar/scripts/powermenu
 type = custom/script
 exec = ~/.config/polybar/scripts/ticker-scroll
 tail = true
-; label-foreground = ${color.green}
 format = <label>
-; click-left = focus-spotify
-; interval = 2
 
