Ouuuu polybar lookin good now

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -49,6 +49,7 @@ label-occupied-foreground = ${color.fg}
 type = custom/script
 tail = true
 format = <label>
+format-foreground = ${color.light-pink}
 exec = get-song
 click-left = focus-spotify
 interval = 5
@@ -57,7 +58,7 @@ interval = 5
 type = custom/text
 content = 玲
 content-font = 5
-content-foreground = ${color.fg}
+content-foreground = ${color.light-pink}
 click-left = playerctl -p spotify previous
 
 [module/play-pause]
@@ -65,6 +66,7 @@ type = custom/ipc
 hook-0 = echo ""
 hook-1 = echo "契"
 format-font = 5
+format-foreground = ${color.pink}
 initial = 2
 click-left = ~/.config/polybar/scripts/play-pause
 
@@ -72,7 +74,7 @@ click-left = ~/.config/polybar/scripts/play-pause
 type = custom/text
 content = 怜
 content-font = 5
-content-foreground = ${color.fg}
+content-foreground = ${color.light-pink}
 click-left = playerctl -p spotify next
 
 [module/cpu]
@@ -113,38 +115,37 @@ label = %percentage_used%%
 type = internal/battery
 battery = BAT0
 adapter = ADP1
-ramp-capacity-font = 5
-animation-charging-font = 4
+
+format-charging-foreground = ${color.green}
 format-charging = "<animation-charging>  <label-charging> "
-format-discharging = "<ramp-capacity>  <label-discharging> "
-format-full-prefix-font = 5
-format-full-prefix = " "
-format-full-prefix-foreground = ${color.green}
-format-full = "<label-full> "
-ramp-capacity-0=""
-ramp-capacity-1=""
-ramp-capacity-2=""
-ramp-capacity-3=""
-ramp-capacity-4=""
-ramp-capacity-5=""
-ramp-capacity-6=""
-ramp-capacity-7=""
-ramp-capacity-8=""
-ramp-capacity-9=""
-ramp-capacity-10=""
-ramp-capacity-0-foreground = ${color.red}
-ramp-capacity-1-foreground = ${color.red}
-ramp-capacity-2-foreground = ${color.orange}
-ramp-capacity-3-foreground = ${color.yellow}
-ramp-capacity-foreground = ${color.fg}
 animation-charging-0=""
 animation-charging-1=""
 animation-charging-2=""
 animation-charging-3=""
 animation-charging-4=""
 animation-charging-5=""
-animation-charging-foreground = ${color.fg}
 animation-charging-framerate = 750
+animation-charging-font = 4
+
+format-full-prefix = " "
+format-full = "<label-full> "
+format-full-prefix-font = 5
+
+format-discharging = "<ramp-capacity>  <label-discharging> "
+label-discharging = %percentage%%%{F-}
+; Can't use variables in format strings
+ramp-capacity-0="%{F#F07178}"
+ramp-capacity-1="%{F#FFA570}"
+ramp-capacity-2="%{F#FFCB6B}"
+ramp-capacity-3="%{F#B3E1A3}"
+ramp-capacity-4="%{F#B3E1A3}"
+ramp-capacity-5="%{F#B3E1A3}"
+ramp-capacity-6="%{F#B3E1A3}"
+ramp-capacity-7="%{F#B3E1A3}"
+ramp-capacity-8="%{F#B3E1A3}"
+ramp-capacity-9="%{F#B3E1A3}"
+ramp-capacity-10="%{F#B3E1A3}"
+ramp-capacity-font = 5
 
 [module/volume]
 type = internal/pulseaudio
@@ -154,22 +155,24 @@ ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
 ramp-volume-3 = "   "
-label-volume-foreground = ${color.fg}
+format-volume-foreground = ${color.pink}
+label-volume-foreground = ${color.pink}
 label-muted = "󰸈 "
-format-muted-foreground = ${color.fg}
+format-muted-foreground = ${color.aqua}
 click-right = pavucontrol &
 
 [module/backlight]
 type = internal/xbacklight
 card = intel_backlight
 enable-scroll = true
-format = "<ramp>   <label>  "
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-3 = 
 ramp-4 = 
 ramp-5 = 
+format = "<ramp>   <label>  "
+format-foreground = ${color.aqua}
 
 [module/wifi]
 type = internal/network
@@ -186,7 +189,7 @@ ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
 ramp-signal-0-foreground = ${color.red}
 ramp-signal-1-foreground = ${color.yellow}
-ramp-signal-foreground = ${color.fg}
+ramp-signal-foreground = ${color.purple}
 ramp-signal-font = 8
 
 [module/ethernet]
@@ -203,6 +206,7 @@ label-disconnected = 
 label-disconnected-foreground = #6c809e
 label-packetloss = 
 format-packetloss-foreground = #ffa64c
+format-foreground = ${color.purple}
 
 [module/date-time]
 type = internal/date
@@ -210,6 +214,7 @@ interval = 5
 time =    %I:%M %p
 time-alt =    %a %b %e
 label = %time%
+format-foreground = ${color.blue}
 
 [module/powermenu]
 type = custom/text
