--- a/global/dot-config/polybar/colors.ini
+++ b/global/dot-config/polybar/colors.ini
@@ -6,18 +6,16 @@ invis = #00000000
 fg = #eeeeee
 grey = #55ffffff
 
-red = #fb4934
-green = #1DB954
-yellow = #fabd2f
-blue = #83a598
-purple = #d3869b
+red = #F07178
+green = #B3E1A3
+yellow = #FFCB6B
+blue = #A4B9EF
+purple = #C6AAE8
 pink = #d3869b
-aqua = #8ec07c
-cyan = #4ec9b0
-orange = #fe8019
+light-pink = #ffd5cd
+aqua = #A4D8D8
+cyan = #4EC9B0
+orange = #FFA570
 
-white = #dddddd
-blueA = #83afe1
-grey1 = #5bb1c9
-grey2 = #5bf1c9
+grey2 = #8E8C9C
 
