--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -13,6 +13,8 @@
 
 
 [global/wm]
+margin-top = 0
+margin-bottom = 3px
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 
