Ignore polybar in picom

--- a/global/dot-config/picom/picom.conf
+++ b/global/dot-config/picom/picom.conf
@@ -16,7 +16,7 @@ size-transition = false
 #################################
 corner-radius = 10.0;
 rounded-corners-exclude = [
-  # "class_g = 'Polybar'",
+  "class_g = 'Polybar'",
   "class_g = 'rofi'",
   "widthb=1920",
   "widthb=2560"
@@ -252,7 +252,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  #"window_type = 'dock'",
+  "window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
@@ -492,3 +492,4 @@ wintypes:
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
