--- a/global/dot-config/polybar/colors.ini
+++ b/global/dot-config/polybar/colors.ini
@@ -10,10 +10,13 @@ red = #F07178
 green = #B3E1A3
 yellow = #FFCB6B
 blue = #A4B9EF
+light-blue = #C9D4EF
+dark-blue = #7495E7
 purple = #C6AAE8
 pink = #d3869b
 light-pink = #ffd5cd
-aqua = #A4D8D8
+aqua = #9EDCCF
+light-cyan = #C6E5DF
 cyan = #4EC9B0
 orange = #FFA570
 
