--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -19,7 +19,6 @@ enable-scroll = false
 
 format = <label-state>
 format-font = 6
-format-background = ${color.bg}
 format-padding = 0
 
 icon-0 = 1;
@@ -43,7 +42,7 @@ label-occupied-padding = 1
 label-empty-foreground = ${color.grey}
 label-active-foreground = ${color.cyan}
 label-urgent-foreground = ${color.orange}
-label-occupied-foreground = ${color.fg}
+label-occupied-foreground = ${color.light-cyan}
 
 [module/now-playing]
 type = custom/script
