Tweak media icons

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -73,7 +73,7 @@ width = 30%
 height = 40
 offset-x = 35%
 offset-y = 5px
-modules-center = now-playing
+modules-center = media-icon now-playing
 modules-right = prev-song play-pause next-song
 
 [bar/sys]
