--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -44,12 +44,21 @@ label-active-foreground = ${color.cyan}
 label-urgent-foreground = ${color.orange}
 label-occupied-foreground = ${color.light-cyan}
 
+[module/media-icon]
+type = custom/script
+tail = true
+format = <label>
+format-foreground = ${color.pink}
+exec = get-song icon
+click-left = focus-spotify
+interval = 5
+
 [module/now-playing]
 type = custom/script
 tail = true
 format = <label>
 format-foreground = ${color.light-pink}
-exec = get-song
+exec = get-song noicon
 click-left = focus-spotify
 interval = 5
 
