Center polybar music controls

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -73,8 +73,8 @@ width = 30%
 height = 40
 offset-x = 35%
 offset-y = 5px
-modules-center = media-icon now-playing
-modules-right = prev-song play-pause next-song
+modules-center = media-icon now-playing prev-song play-pause next-song
+; modules-right = prev-song play-pause next-song
 
 [bar/sys]
 inherit = bar/base
