Custom polybar volume module

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -82,6 +82,8 @@ width = 270
 height = 40
 offset-x = 100%:-390
 offset-y = 5px
+module-margin-left = 2.5
+module-margin-right = 3
 modules-center = volume backlight battery wifi
 
 [bar/datetime]
@@ -100,4 +102,3 @@ offset-x = 0.25%
 offset-y = 5px
 bottom = true
 modules-center = ticker
-
