--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -125,7 +125,7 @@ battery = BAT0
 adapter = ADP1
 
 format-charging-foreground = ${color.green}
-format-charging = "<animation-charging>  <label-charging> "
+format-charging = "<animation-charging>  <label-charging>"
 animation-charging-0=""
 animation-charging-1=""
 animation-charging-2=""
@@ -138,8 +138,9 @@ animation-charging-font = 4
 format-full-prefix = " "
 format-full = "<label-full> "
 format-full-prefix-font = 5
+format-full-foreground = ${color.green}
 
-format-discharging = "<ramp-capacity>  <label-discharging> "
+format-discharging = "<ramp-capacity>  <label-discharging>"
 label-discharging = %percentage%%%{F-}
 ; Can't use variables in format strings
 ramp-capacity-0="%{F#F07178}"
@@ -155,10 +156,10 @@ ramp-capacity-9="%{F#B3E1A3}"
 ramp-capacity-10="%{F#B3E1A3}"
 ramp-capacity-font = 5
 
-[module/volume]
+[module/volume-default]
 type = internal/pulseaudio
 use-ui-max = false
-format-volume = "<ramp-volume> <label-volume>  "
+format-volume = "<ramp-volume> <label-volume>"
 ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
@@ -168,6 +169,16 @@ label-volume-foreground = ${color.pink}
 label-muted = "󰸈 "
 format-muted-foreground = ${color.aqua}
 click-right = pavucontrol &
+
+[module/volume]
+type = custom/script
+exec = ~/.config/polybar/scripts/pulseaudio
+tail = true
+format-foreground = ${color.pink}
+scroll-up = ~/.config/polybar/scripts/pulseaudio up &
+scroll-down = ~/.config/polybar/scripts/pulseaudio down &
+click-left = ~/.config/polybar/scripts/pulseaudio mute &
+click-right = exec pavucontrol &
 
 [module/backlight]
 type = internal/xbacklight
@@ -179,7 +190,7 @@ ramp-2 = 
 ramp-3 = 
 ramp-4 = 
 ramp-5 = 
-format = "<ramp>   <label>  "
+format = "<ramp>   <label>"
 format-foreground = ${color.aqua}
 
 [module/wifi]
@@ -235,4 +246,3 @@ type = custom/script
 exec = ~/.config/polybar/scripts/ticker-scroll
 tail = true
 format = <label>
-
