Update polybar for desktop

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -21,7 +21,7 @@ include-file = ~/.config/polybar/modules.ini
 [bar/base]
 monitor-strict = false
 monitor-exact = true
-override-redirect = true
+override-redirect = false
 tray-position = none
 enable-ipc = true
 
@@ -32,7 +32,7 @@ foreground = ${color.fg}
 
 radius = 15
 fixed-center = true
-line-size = 3
+; line-size =
 padding = 5
 module-margin-left = 2
 module-margin-right = 2
@@ -48,16 +48,21 @@ font-5 = Fira Code Nerd Font:size=14:style=Regular Condensed;3
 font-6 = Material Design Icons Desktop:pixelsize=18;6
 ; wifi icon
 font-7 = Material Design Icons Desktop:pixelsize=18;4
+; separator
+font-8 = JetBrains Mono Nerd Font:size=10:style=Regular;0
 
 [bar/top]
 inherit = bar/base
+module-margin-left = 4
+module-margin-right = 4
 width = 99.5%
 height = 40
 offset-x = 0.25%
 offset-y = 5px
 modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
-modules-right = cpu memory volume backlight battery wifi date-time powermenu
+; modules-right = cpu memory volume-default ethernet separator date-time separator powermenu
+modules-right = cpu memory volume-default ethernet clock powermenu
 
 [bar/workspaces]
 inherit = bar/base
@@ -74,7 +79,6 @@ height = 40
 offset-x = 35%
 offset-y = 5px
 modules-center = media-icon now-playing prev-song play-pause next-song
-; modules-right = prev-song play-pause next-song
 
 [bar/sys]
 inherit = bar/base
@@ -86,13 +90,13 @@ module-margin-left = 2.5
 module-margin-right = 3
 modules-center = volume backlight battery wifi
 
-[bar/datetime]
+[bar/clock]
 inherit = bar/base
 width = 110px
 height = 40
 offset-x = 100%:-115
 offset-y = 5px
-modules-center = date-time
+modules-center = clock
 
 [bar/tickerbar]
 inherit = bar/base
