--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -1,3 +1,9 @@
+[module/separator]
+type = custom/text
+content = "▕  "
+content-font = 9
+content-foreground = ${color.grey2}
+
 [module/search]
 type = custom/text
 content = "  "
@@ -88,7 +94,7 @@ click-left = playerctl -p spotify next
 [module/cpu]
 type = internal/cpu
 interval = 2
-format = <ramp-load>
+format =     <label>
 format-foreground = ${color.pink}
 ramp-load-8 = █
 ramp-load-7 = ▇
@@ -98,15 +104,14 @@ ramp-load-4 = ▄
 ramp-load-3 = ▃
 ramp-load-2 = ▂
 ramp-load-1 = ▁
-ramp-load-0 =
+ramp-load-0 = "         "
 format-prefix-foreground = ${color.fg}
-format-underline = ${color.pink}
 label = %percentage%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-format = <ramp-used>
+format =    <label>
 format-foreground = ${color.cyan}
 ramp-used-8 = █
 ramp-used-7 = ▇
@@ -116,7 +121,7 @@ ramp-used-4 = ▄
 ramp-used-3 = ▃
 ramp-used-2 = ▂
 ramp-used-1 = ▁
-ramp-used-0 =
+ramp-used-0 = "         "
 label = %percentage_used%%
 
 [module/battery]
@@ -164,10 +169,10 @@ ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
 ramp-volume-3 = "   "
-format-volume-foreground = ${color.pink}
-label-volume-foreground = ${color.pink}
+format-volume-foreground = ${color.purple}
+label-volume-foreground = ${color.purple}
 label-muted = "󰸈 "
-format-muted-foreground = ${color.aqua}
+format-muted-foreground = ${color.purple}
 click-right = pavucontrol &
 
 [module/volume]
@@ -222,17 +227,25 @@ format-disconnected = <label-disconnected>
 format-packetloss = <label-packetloss>
 label-connected = 
 label-disconnected = 
-label-disconnected-foreground = #6c809e
+label-disconnected-foreground = ${color.red}
 label-packetloss = 
-format-packetloss-foreground = #ffa64c
-format-foreground = ${color.purple}
+format-packetloss-foreground = ${color.yellow}
+format-connected-foreground = ${color.green}
 
-[module/date-time]
+[module/clock]
 type = internal/date
 interval = 5
 time =    %I:%M %p
 time-alt =    %a %b %e
 label = %time%
+format-foreground = ${color.blue}
+
+[module/date-time]
+type = internal/date
+interval = 5
+time =    %I:%M %p
+date =    %a %b %e
+label = %date%      %time%
 format-foreground = ${color.blue}
 
 [module/powermenu]
