Custom volume works for coeus

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -62,7 +62,7 @@ offset-y = 5px
 modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
 ; modules-right = cpu memory volume-default ethernet separator date-time separator powermenu
-modules-right = cpu memory volume-default ethernet clock powermenu
+modules-right = cpu memory volume ethernet clock powermenu
 
 [bar/workspaces]
 inherit = bar/base
