--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -179,7 +179,7 @@ click-right = pavucontrol &
 type = custom/script
 exec = ~/.config/polybar/scripts/pulseaudio
 tail = true
-format-foreground = ${color.pink}
+format-foreground = ${color.purple}
 scroll-up = ~/.config/polybar/scripts/pulseaudio up &
 scroll-down = ~/.config/polybar/scripts/pulseaudio down &
 click-left = ~/.config/polybar/scripts/pulseaudio mute &
