Tweak song handling

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -53,16 +53,14 @@ font-8 = JetBrains Mono Nerd Font:size=10:style=Regular;0
 
 [bar/top]
 inherit = bar/base
-module-margin-left = 4
-module-margin-right = 4
 width = 99.5%
 height = 40
 offset-x = 0.25%
 offset-y = 5px
 modules-left = workspaces
-modules-center = now-playing prev-song play-pause next-song
+modules-center = media-icon now-playing prev-song play-pause next-song
 ; modules-right = cpu memory volume-default ethernet separator date-time separator powermenu
-modules-right = cpu memory volume ethernet clock powermenu
+modules-right = cpu spacer memory spacer volume spacer ethernet spacer clock spacer powermenu
 
 [bar/workspaces]
 inherit = bar/base
