--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -4,6 +4,10 @@ content = "▕  "
 content-font = 9
 content-foreground = ${color.grey2}
 
+[module/spacer]
+type = custom/text
+content = " "
+
 [module/search]
 type = custom/text
 content = "  "
