Add tmux session swaps and end to main keybind

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -86,7 +86,7 @@ bind-key r command-prompt -I "#W" "rename-window '%%'"
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
-bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
+# bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
 
 # kill
 bind-key Q kill-session
@@ -99,6 +99,8 @@ bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
 bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
 bind-key e split-window -h "ve"
 bind-key E split-window -v "ve"
+bind-key BSpace run-shell "tm end main"
+bind-key \\ run-shell "tm swap"
 
 # Styles
 set -g status-bg black
@@ -118,4 +120,3 @@ setw -g window-status-current-format '#[fg=color15,bg=black]#[default]#W#[fg=
 
 set-option -ga pane-active-border-style bg=default,fg=color8
 set-option -ga pane-border-style bg=default,fg=color8
-
