--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -52,10 +52,7 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 # panes (splits)
 bind-key v split-window -h
 bind-key s split-window -v
-
-no_bot="tmux list-panes -F '#{pane_at_top} #{pane_at_bottom}' | grep -q '1 1'"
-is_zoomed="tmux list-panes -F '#F' | grep -q Z"
-bind-key t if-shell "$no_bot" ' if-shell "$is_zoomed" "resize-pane -Z" "split-window -v -p 30"' "resize-pane -Z"
+bind-key t run-shell "tm toggle_term"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
