feat (polybar): add monitor brightness and control

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -189,6 +189,14 @@ scroll-down = ~/.config/polybar/scripts/pulseaudio down &
 click-left = ~/.config/polybar/scripts/pulseaudio mute &
 click-right = exec pavucontrol &
 
+[module/brightness]
+type = custom/script
+exec = ~/.config/polybar/scripts/brightness
+tail = true
+format-foreground = ${color.orange}
+scroll-up = ~/.config/polybar/scripts/brightness up &
+scroll-down = ~/.config/polybar/scripts/brightness down &
+
 [module/backlight]
 type = internal/xbacklight
 card = intel_backlight
