feat (tmux): add break pane keybind

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -80,6 +80,7 @@ bind-key C-k swap-pane -U
 # windows
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
+bind-key b break-pane
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
