fix (polybar): only update brightness on change

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -60,6 +60,7 @@ offset-y = 5px
 modules-left = workspaces
 modules-center = media-icon now-playing prev-song play-pause next-song
 ; modules-right = cpu memory volume-default ethernet separator date-time separator powermenu
+; modules-right = cpu spacer memory spacer volume spacer ethernet spacer clock spacer powermenu
 modules-right = cpu spacer memory spacer volume spacer brightness spacer ethernet spacer clock spacer powermenu
 
 [bar/workspaces]
