--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -190,8 +190,9 @@ click-left = ~/.config/polybar/scripts/pulseaudio mute &
 click-right = exec pavucontrol &
 
 [module/brightness]
-type = custom/script
-exec = ~/.config/polybar/scripts/brightness
+type = custom/ipc
+hook-0 = ~/.config/polybar/scripts/brightness
+initial = 1
 tail = true
 format-foreground = ${color.orange}
 scroll-up = ~/.config/polybar/scripts/brightness up &
