feat (polybar): switch to ipc for custom volume module

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -180,8 +180,9 @@ format-muted-foreground = ${color.purple}
 click-right = pavucontrol &
 
 [module/volume]
-type = custom/script
-exec = ~/.config/polybar/scripts/pulseaudio
+type = custom/ipc
+hook-0 = ~/.config/polybar/scripts/pulseaudio
+initial = 1
 tail = true
 format-foreground = ${color.purple}
 scroll-up = ~/.config/polybar/scripts/pulseaudio up &
