feat (tmux): use builtin "switch to last session"

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -98,7 +98,7 @@ bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
 bind-key e split-window -h "ve"
 bind-key E split-window -v "ve"
 bind-key BSpace run-shell "tm end main"
-bind-key \\ run-shell "tm swap"
+bind-key \\ switch-client -l
 
 # Styles
 set -g status-bg black
