--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -81,6 +81,7 @@ bind-key C-k swap-pane -U
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
 bind-key b break-pane
+bind-key B break-pane -d
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
