feat (polybar): launch music bar if spotify is running

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -184,7 +184,7 @@ type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/pulseaudio
 initial = 1
 tail = true
-format-foreground = ${color.purple}
+format-foreground = ${color.orange}
 scroll-up = ~/.config/polybar/scripts/pulseaudio up &
 scroll-down = ~/.config/polybar/scripts/pulseaudio down &
 click-left = ~/.config/polybar/scripts/pulseaudio mute &
