chore (polybar): update colors

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -195,7 +195,7 @@ type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/brightness
 initial = 1
 tail = true
-format-foreground = ${color.orange}
+format-foreground = ${color.aqua}
 scroll-up = ~/.config/polybar/scripts/brightness up &
 scroll-down = ~/.config/polybar/scripts/brightness down &
 
