--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -94,7 +94,7 @@ bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
-bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "lazygit"
+bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -n1 -sr && .lg)"
 bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
 bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
 bind-key e split-window -h "ve"
