feat: tmux popup shell

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -52,7 +52,6 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 # panes (splits)
 bind-key v split-window -h
 bind-key s split-window -v
-bind-key t run-shell "tm toggle_term"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -94,6 +93,8 @@ bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
+bind-key t run-shell "tm toggle_term"
+bind-key T display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "triangles && zsh"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
 bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
