fix: prevent kitty ask to close

--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # shell
 shell                   zsh -c 'tm startup || triangles && echo && exec zsh'
 enable_audio_bell       no
+confirm_os_window_close 0
 
 # performance
 repaint_delay           5
