feat: better tmux backspace bind

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -100,7 +100,7 @@ bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
 bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
 bind-key e split-window -h "ve"
 bind-key E split-window -v "ve"
-bind-key BSpace run-shell "tm end main"
+bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm end scratch || tm end main"
 bind-key \\ switch-client -l
 
 # Styles
