feat: tweak polybar

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -195,7 +195,7 @@ type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/brightness
 initial = 1
 tail = true
-format-foreground = ${color.aqua}
+format-foreground = ${color.yellow}
 scroll-up = ~/.config/polybar/scripts/brightness up &
 scroll-down = ~/.config/polybar/scripts/brightness down &
 
@@ -210,7 +210,7 @@ ramp-3 = 
 ramp-4 = 
 ramp-5 = 
 format = "<ramp>   <label>"
-format-foreground = ${color.aqua}
+format-foreground = ${color.yellow}
 
 [module/wifi]
 type = internal/network
@@ -261,6 +261,20 @@ time =    %I:%M %p
 date =    %a %b %e
 label = %date%      %time%
 format-foreground = ${color.blue}
+
+[module/date]
+type = internal/date
+interval = 5
+date =    %a %b %e
+label = %date%
+format-foreground = ${color.blue}
+
+[module/time]
+type = internal/date
+interval = 5
+time =    %H:%M
+label = %time%
+format-foreground = ${color.pink}
 
 [module/powermenu]
 type = custom/text
