--- a/global/dot-config/polybar/colors.ini
+++ b/global/dot-config/polybar/colors.ini
@@ -13,7 +13,8 @@ blue = #A4B9EF
 light-blue = #C9D4EF
 dark-blue = #7495E7
 purple = #C6AAE8
-pink = #d3869b
+; pink = #d3869b
+pink = #DF8589
 light-pink = #ffd5cd
 aqua = #9EDCCF
 light-cyan = #C6E5DF
