--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -81,7 +81,7 @@ modules-center = media-icon now-playing prev-song play-pause next-song
 inherit = bar/base
 width = 270
 height = 40
-offset-x = 100%:-390
+offset-x = 100%:-480
 offset-y = 5px
 module-margin-left = 2.5
 module-margin-right = 3
@@ -89,11 +89,11 @@ modules-center = volume backlight battery wifi
 
 [bar/clock]
 inherit = bar/base
-width = 110px
+width = 190
 height = 40
-offset-x = 100%:-115
+offset-x = 100%:-195
 offset-y = 5px
-modules-center = clock
+modules-center = date time
 
 [bar/tickerbar]
 inherit = bar/base
