feat: tweak polybar

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -79,7 +79,7 @@ modules-center = media-icon now-playing prev-song play-pause next-song
 
 [bar/sys]
 inherit = bar/base
-width = 270
+width = 260
 height = 40
 offset-x = 100%:-480
 offset-y = 5px
@@ -89,10 +89,12 @@ modules-center = volume backlight battery wifi
 
 [bar/clock]
 inherit = bar/base
-width = 190
+width = 200
 height = 40
-offset-x = 100%:-195
+offset-x = 100%:-205
 offset-y = 5px
+module-margin-left = 2.5
+module-margin-right = 3
 modules-center = date time
 
 [bar/tickerbar]
