--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -195,7 +195,7 @@ type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/brightness
 initial = 1
 tail = true
-format-foreground = ${color.yellow}
+format-foreground = ${color.aqua}
 scroll-up = ~/.config/polybar/scripts/brightness up &
 scroll-down = ~/.config/polybar/scripts/brightness down &
 
@@ -210,7 +210,7 @@ ramp-3 = 
 ramp-4 = 
 ramp-5 = 
 format = "<ramp>   <label>"
-format-foreground = ${color.yellow}
+format-foreground = ${color.aqua}
 
 [module/wifi]
 type = internal/network
@@ -266,6 +266,7 @@ format-foreground = ${color.blue}
 type = internal/date
 interval = 5
 date =    %a %b %e
+date-alt =    %D
 label = %date%
 format-foreground = ${color.blue}
 
@@ -273,6 +274,7 @@ format-foreground = ${color.blue}
 type = internal/date
 interval = 5
 time =    %H:%M
+time-alt =    %I:%M%P
 label = %time%
 format-foreground = ${color.pink}
 
