feat: overhaul brightness and volume bar icons

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -85,7 +85,7 @@ offset-x = 100%:-480
 offset-y = 5px
 module-margin-left = 2.5
 module-margin-right = 3
-modules-center = volume backlight battery wifi
+modules-center = volume brightness battery wifi
 
 [bar/clock]
 inherit = bar/base
