feat: add tmux-cht script to shortcut cht.sh

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -95,6 +95,7 @@ bind-key w kill-pane
 bind-key Enter display-popup -E "tm"
 bind-key t run-shell "tm toggle_term"
 bind-key T display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "triangles && zsh"
+bind-key c run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
 bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
