--- a/global/dot-config/starship.toml
+++ b/global/dot-config/starship.toml
@@ -127,9 +127,9 @@ ahead = "落×${count} "
 behind = " ×${count} "
 diverged = "落×${ahead_count}  ×${behind_count} "
 modified = " ×${count} "
-untracked = "﬒ ×${count} "
-stashed = "﬚  "
-staged = "﫠×${count} "
+untracked = " ×${count} "
+stashed = " "
+staged = " 﫠×${count} "
 renamed = " ×${count} "
 deleted = " ×${count} "
 
