--- a/global/dot-config/jupyter/jupyter_nbconvert_config.json
+++ b/global/dot-config/jupyter/jupyter_nbconvert_config.json
@@ -3,7 +3,8 @@
   "Exporter": {
     "template_path": [
       ".",
-      "/home/ecal/.local/share/virtualenvs/nlp/lib/python3.9/site-packages/jupyter_contrib_nbextensions/templates"
+      "/home/ecal/.local/share/virtualenvs/nlp/lib/python3.9/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis/lib/python3.8/site-packages/jupyter_contrib_nbextensions/templates"
     ],
     "preprocessors": [
       "jupyter_contrib_nbextensions.nbconvert_support.CodeFoldingPreprocessor",
