reduce term margins

--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -6,9 +6,9 @@ confirm_os_window_close 0
 # performance
 repaint_delay           5
 
-# window margin
-single_window_margin_width 0.5 2 0.5 2
-window_padding_width 0.5 2 0.5 2
+# window margin t r b l
+single_window_margin_width 0 2 0 2
+window_padding_width 0 0 0 0
 
 # font
 
