--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -14,11 +14,12 @@
 
 [global/wm]
 margin-top = 0
-margin-bottom = 3px
+margin-bottom = 0
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 
 [bar/base]
+height = 30
 monitor-strict = false
 monitor-exact = true
 override-redirect = false
@@ -33,7 +34,7 @@ foreground = ${color.fg}
 radius = 15
 fixed-center = true
 ; line-size =
-padding = 5
+padding = 1
 module-margin-left = 2
 module-margin-right = 2
 
@@ -64,25 +65,22 @@ modules-right = cpu spacer memory spacer volume spacer brightness spacer etherne
 [bar/workspaces]
 inherit = bar/base
 width = 270px
-height = 40
 offset-x = 5px
-offset-y = 5px
+offset-y = 0px
 modules-center = workspaces
 
 [bar/music]
 inherit = bar/base
 width = 30%
-height = 40
 offset-x = 35%
-offset-y = 5px
+offset-y = 0px
 modules-center = media-icon now-playing prev-song play-pause next-song
 
 [bar/sys]
 inherit = bar/base
 width = 260
-height = 40
 offset-x = 100%:-480
-offset-y = 5px
+offset-y = 0px
 module-margin-left = 2.5
 module-margin-right = 3
 modules-center = volume brightness battery wifi
@@ -90,9 +88,8 @@ modules-center = volume brightness battery wifi
 [bar/clock]
 inherit = bar/base
 width = 200
-height = 40
 offset-x = 100%:-205
-offset-y = 5px
+offset-y = 0px
 module-margin-left = 2.5
 module-margin-right = 3
 modules-center = date time
@@ -100,7 +97,6 @@ modules-center = date time
 [bar/tickerbar]
 inherit = bar/base
 width = 99.5%
-height = 40
 offset-x = 0.25%
 offset-y = 5px
 bottom = true
