--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -93,14 +93,11 @@ bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
-bind-key t run-shell "tm toggle_term"
+bind-key t run-shell "toggle-term"
 bind-key T display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "triangles && zsh"
 bind-key c run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
-bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
-bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
-bind-key e split-window -h "ve"
-bind-key E split-window -v "ve"
+bind-key p new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm end scratch || tm end main"
 bind-key \\ switch-client -l
 
@@ -110,7 +107,7 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
-set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
+set -g status-left '#[fg=black,bg=cyan] #(tmux-icon) #S #[fg=cyan,bg=black]#[default] '
 set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan]  %H:%M '
 
 setw -g window-status-style fg='color8',bg='color15'
